--- a/.gitignore
+++ b/.gitignore
@@ -24,14 +24,13 @@ Thumbs.db
                             
 # Android Studio
 *.iml
+.idea
+#.idea/workspace.xml - remove # and delete .idea if it better suit your needs.
 .gradle
-/local.properties
-/.idea/workspace.xml
-/.idea/libraries
-.DS_Store
-/build
-/captures
-.externalNativeBuild
+build/
+.navigation
+captures/
+output.json
     
 #NDK
 obj/
