--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,6 @@ android.enableJetifier=true
 kotlin.code.style=official
 
 MAPS_API_KEY=AIzaSyAkI5WXSGsyTiqSgC_JXzg97bOzWnq43K4
+android.defaults.buildfeatures.buildconfig=true
+android.nonTransitiveRClass=false
+android.nonFinalResIds=false
